--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -8,9 +8,6 @@ on:
             branch:
                 required: true
                 type: string
-            gh_token:
-                required: true
-                type: string
 jobs:
     build:
         name: build
@@ -28,7 +25,7 @@ jobs:
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   script: |
                       repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
-                      echo "${{ env.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
+                      docker login ghcr.io -u $repo_owner --password ${{ secrets.GH_TOKEN }}
                       cd ${{ vars.SERVER_DEPLOY_PATH }}
                       docker compose pull
                       docker compose down
