--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -80,5 +80,5 @@ jobs:
                   for branch in $branches; do
                       gh workflow run docker-update.yml -f repo_name=${{ inputs.repo_name }} -f branch=$branch
                   done
-            #   env:
-            #       GH_TOKEN: ${{ secrets.GH_TOKEN }}
+              env:
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
