--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -25,7 +25,7 @@ jobs:
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   script: |
                       repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
-                      docker login -u $repo_owner --p ${{ secrets.GH_TOKEN }} ghcr.io
+                      docker login -u $repo_owner -p ${{ secrets.GH_TOKEN }} ghcr.io
                       cd ${{ vars.SERVER_DEPLOY_PATH }}
                       docker compose pull
                       docker compose down
