fix login docker

--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -28,7 +28,7 @@ jobs:
                       echo "here ===>"
                       echo $repo_owner
 
-                      docker login -u $repo_owner -p ${{ env.GH_TOKEN }} ghcr.io
+                      docker login -u $repo_owner -p ${{ secrets.GH_TOKEN }} ghcr.io
                       cd ${{ vars.SERVER_DEPLOY_PATH }}
                       docker compose pull
                       docker compose down
