--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -26,10 +26,10 @@ jobs:
                   script: |
 
                       echo "here ===>"
-                      repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
+                      repo_owner=$(echo ${{inputs.repo_name}} | cut -d '/' -f1)
                       echo "this is ${repo_owner}"
 
-                      docker login -u vdx-vn -p ${{ secrets.GH_TOKEN }} ghcr.io
+                    #   docker login -u vdx-vn -p ${{ secrets.GH_TOKEN }} ghcr.io
                       docker login -u $repo_owner -p ${{ secrets.GH_TOKEN }} ghcr.io
                       # fixme: uncomment
                         #   cd ${{ vars.SERVER_DEPLOY_PATH }}
