--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -8,6 +8,9 @@ on:
             branch:
                 required: true
                 type: string
+            repo_owner:
+                required: true
+                type: string
 jobs:
     build:
         name: build
@@ -29,7 +32,7 @@ jobs:
                       repo_owner=$(echo ${{inputs.repo_name}} | cut -d '/' -f1)
                       echo "this is ${repo_owner}"
 
-                      docker login -u $repo_owner -p ${{ secrets.GH_TOKEN }} ghcr.io
+                      docker login -u ${{ inputs.repo_owner }} -p ${{ secrets.GH_TOKEN }} ghcr.io
                       # fixme: uncomment
                         #   cd ${{ vars.SERVER_DEPLOY_PATH }}
                         #   docker compose pull
