--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -8,6 +8,9 @@ on:
             branch:
                 required: true
                 type: string
+            repo_owner:
+                required: true
+                type: string
 jobs:
     build:
         name: build
@@ -24,8 +27,7 @@ jobs:
                   user: ${{vars.SERVER_USER}}
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   script: |
-                      repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
-                      docker login -u $repo_owner -p ${{ secrets.GH_TOKEN }} ghcr.io
+                      docker login -u ${{ inputs.repo_owner }} -p ${{ secrets.GH_TOKEN }} ghcr.io
                       cd ${{ vars.SERVER_DEPLOY_PATH }}
                       docker compose pull
                       docker compose down
