--- a/.github/actions/ssh-script/action.yml
+++ b/.github/actions/ssh-script/action.yml
@@ -38,7 +38,10 @@ runs:
                 #     ${{ inputs.script }}
                 #   EOF
                 # fixme: check this ok or not without EOF for multiple lines
+                # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/workflow-commands-for-github-actions#setting-an-output-parameter
               output=$(ssh -o StrictHostKeyChecking=no -p ${{ inputs.port }} -i $keyfile_path ${{ inputs.user }}@${{ inputs.host }} "
                 ${{ inputs.script }}
               ")
+              echo 'hey u'
+              echo $output
               echo "output=$output" >> "$GITHUB_OUTPUT"
