--- a/.github/actions/ssh-script/action.yml
+++ b/.github/actions/ssh-script/action.yml
@@ -13,6 +13,10 @@ inputs:
     script:
         description: "Bash script to execute"
         required: true
+outputs:
+    script-output:
+        description: "Output after execute script"
+        value: ${{ steps.execute-bash-command.outputs.output }}
 
 runs:
     using: "composite"
